--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/mouse-wheel": "^2.4.1",
     "ant-design-vue": "^1.7.6",
     "axios": "^0.21.1",
+    "better-scroll": "^2.4.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
