--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.1",
     "@better-scroll/mouse-wheel": "^2.4.1",
     "ant-design-vue": "^1.7.6",
     "axios": "^0.21.1",
