--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.4.1",
     "@better-scroll/mouse-wheel": "^2.4.1",
+    "animejs": "^3.2.1",
     "ant-design-vue": "^1.7.6",
     "axios": "^0.21.1",
     "better-scroll": "^2.4.1",
