--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,6 +127,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- FASTJSON -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.58</version>
+		</dependency>
 	</dependencies>
 
 	<build>
