后端完成电影搜索接口

--- a/backend/src/main/resources/logstash.conf
+++ b/backend/src/main/resources/logstash.conf
@@ -4,7 +4,6 @@ input {
         placeholder_db_dir => '/opt/logstash-mongodb/'
         placeholder_db_name =>'logstash_sqlite.db'
         collection => 'monki_search'
-        batch_size => 500
     }
 }
 
@@ -15,9 +14,12 @@ filter
     }
     mutate {
         remove_field => "_class"
-        remove_field => "host"
         remove_field => "mongo_id"
         remove_field => "logdate"
+        remove_field => "host"
+        remove_field => "log_entry"
+        remove_field => "@timestamp"
+        remove_field => "@version"
     }
 }
 
